amended for Fireworks/Lllama3

--- a/compsoft/Compsoft_LLM_app.ipynb
+++ b/compsoft/Compsoft_LLM_app.ipynb
@@ -80,7 +80,8 @@
     "modelfamilies_model_dict = {\n",
     "    \"GPT\": [\"gpt-3.5-turbo\", \"gpt-4\"],\n",
     "    \"Mistral\": [\"mistral-tiny\", \"mistral-small\", \"mistral-medium\", \"mistral-large\"],\n",
-    "    \"Llama\": [\"llama-2-7b-chat\", \"llama-2-13b-chat\", \"llama-2-70b-chat\", \"codellama-7b-instruct\", \"codellama-70b-instruct\"],\n",
+    "    #\"Llama\": [\"llama-2-7b-chat\", \"llama-2-13b-chat\", \"llama-2-70b-chat\", \"codellama-7b-instruct\", \"codellama-70b-instruct\"],\n",
+    "    \"Llama\": [\"llama-v3-8b-instruct\", \"llama-v3-70b-instruct\"],\n",
     "}\n",
     "\n",
     "def exec_prompt(chat_history, prompt, system_prompt, model_family = \"Mistral\", model=\"mistral-large\", temperature=0.7, max_tokens=512):\n",
@@ -161,7 +162,7 @@
     "    )\n",
     "\n",
     "#demo.launch()\n",
-    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"CompSoft\", \"Bikszadi16\"), max_threads=20, show_error=True, favicon_path=\"/home/rconsole/GIT/AI-434/source/labfiles/data/favicon.ico\", state_session_capacity=20)"
+    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"CompSoft\", \"Bikszadi16\"), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)"
    ]
   },
   {
