compsoft/Compsoft_Gradio_RAG_app.ipynb compsoft/Compsoft_Gradio_RAG_app.ipynb llm_prompts.py

--- a/compsoft/Compsoft_LLM_app.ipynb
+++ b/compsoft/Compsoft_LLM_app.ipynb
@@ -79,7 +79,9 @@
     "\n",
     "modelfamilies_model_dict = {\n",
     "    \"GPT\": [\"gpt-3.5-turbo\", \"gpt-4\"],\n",
-    "    \"Mistral\": [\"mistral-tiny\", \"mistral-small\", \"mistral-medium\", \"mistral-large\"],\n",
+    "    \"Mistral\": [\"mistral-tiny\", \"mistral-small\", \"mistral-large\",\n",
+    "                             #\"mistral-medium\",\n",
+    "                             \"open-mistral-7b\", \"open-mixtral-8x7b\", \"open-mixtral-8x22b\"],\n",
     "    #\"Llama\": [\"llama-2-7b-chat\", \"llama-2-13b-chat\", \"llama-2-70b-chat\", \"codellama-7b-instruct\", \"codellama-70b-instruct\"],\n",
     "    \"Llama\": [\"llama-v3-8b-instruct\", \"llama-v3-70b-instruct\"],\n",
     "}\n",
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "52a32432-451a-4e06-87a6-52e5708d5202",
+   "id": "985e1a2e-40f9-4955-a2cd-8183f133c5d5",
    "metadata": {},
    "source": [
     "gr.close_all()"
