modified:   Compsoft_LLM_app.ipynb 	modified:   Compsoft_LLM_app.py 	deleted:    component_utils.py 	new file:   compsoft_utils.py 	renamed:    ../component_utils.py -> ../compsoft_utils.py 	deleted:    ../ericsson/Ericsson_LLM_app.ipynb 	deleted:    ../ericsson/Ericsson_LLM_app.py 	deleted:    ../ericsson/component_utils.py 	deleted:    ../ericsson/llm_prompts.py 	modified:   ../llm_prompts.py 	deleted:    ../magyartelekom/MT_LLM_app.ipynb 	deleted:    ../magyartelekom/MT_LLM_app.py 	deleted:    ../magyartelekom/component_utils.py 	deleted:    ../magyartelekom/llm_prompts.py 	deleted:    ../mercedes/MB_LLM_app.ipynb 	deleted:    ../mercedes/MB_LLM_app.py 	deleted:    ../mercedes/component_utils.py 	deleted:    ../mercedes/llm_prompts.py 	deleted:    ../nokia/Nokia_LLM_app.ipynb 	deleted:    ../nokia/Nokia_LLM_app.py 	deleted:    ../nokia/component_utils.py 	deleted:    ../nokia/llm_prompts.py

--- a/compsoft/Compsoft_LLM_app.ipynb
+++ b/compsoft/Compsoft_LLM_app.ipynb
@@ -15,51 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46146858-6aec-4030-ae65-0901bc581304",
-   "metadata": {},
-   "source": [
-    "# Command-line test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ad2724c-a48c-4851-a7fb-fb95bc68d844",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prompt.set_system_prompt('You are a helpful, honest and honest assistant.')\n",
-    "# Prompt.set_system_prompt('You are a funny assistant speaking in pirate English')\n",
-    "Prompt.set_system_prompt('You are a helpful, harmless and honest assistant who has to answer questions in a funny style.')\n",
-    "\n",
-    "\n",
-    "# You can use the LSP or the typing to check the available models\n",
-    "#Prompt.set_model(\"GPT\", \"gpt-3.5-turbo\")\n",
-    "Prompt.set_model(\"Mistral\", \"mistral-large\")\n",
-    "#Prompt.set_model(\"Llama\", \"llama-2-70b-chat\")\n",
-    "\n",
-    "Prompt.set_max_tokens(512)\n",
-    "Prompt.set_verbose(True)\n",
-    "Prompt.set_temperature(0.00)\n",
-    "\n",
-    "streaming = True\n",
-    "\n",
-    "prompt = 'Who was Albert Einstein?'\n",
-    "\n",
-    "if streaming == True:\n",
-    "    stream = Prompt.exec_streaming(prompt)\n",
-    "    for chunk in stream:\n",
-    "        print(chunk, end=\"\")\n",
-    "    print(\"\")\n",
-    "else:\n",
-    "    response = Prompt.exec(prompt)\n",
-    "    print(response)\n",
-    "    print(\"\")\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d712a037-a593-4b3b-9ba5-ceb58dc0351f",
    "metadata": {},
    "source": [
@@ -78,24 +33,23 @@
     "Prompt.set_verbose(False)\n",
     "\n",
     "modelfamilies_model_dict = {\n",
-    "    \"GPT\": [\"gpt-3.5-turbo\", \"gpt-4\"],\n",
-    "    \"Mistral\": [\"mistral-tiny\", \"mistral-small\", \"mistral-large\",\n",
-    "                             #\"mistral-medium\",\n",
-    "                             \"open-mistral-7b\", \"open-mixtral-8x7b\", \"open-mixtral-8x22b\"],\n",
+    "    \"GPT\": [\"gpt-3.5-turbo\", \"gpt-4o\", \"gpt-4-turbo\"],\n",
+    "    \"Mistral\": [\"mistral-small\", \"mistral-large\", \"open-mistral-7b\", \"open-mixtral-8x7b\", \"open-mixtral-8x22b\"],\n",
     "    #\"Llama\": [\"llama-2-7b-chat\", \"llama-2-13b-chat\", \"llama-2-70b-chat\", \"codellama-7b-instruct\", \"codellama-70b-instruct\"],\n",
-    "    \"Llama\": [\"llama-v3-8b-instruct\", \"llama-v3-70b-instruct\"],\n",
+    "    \"Llama\": [\"llama-v3-8b-instruct\", \"llama-v3-70b-instruct\", \"llama-v2-7b-chat\", \"llama-v2-70b-chat\"],\n",
     "}\n",
     "\n",
     "def exec_prompt(chat_history, prompt, system_prompt, model_family = \"Mistral\", model=\"mistral-large\", temperature=0.7, max_tokens=512):\n",
     "    if prompt == \"\": prompt = \"I have no question\"\n",
     "    if model == \"mistral-large\": model = \"mistral-large-latest\"\n",
+    "    if model == \"mistral-small\": model = \"mistral-small-latest\"\n",
     "    if model_family == \"Mistral\" and temperature > 1: temperature = 1\n",
     "    if model_family == \"Llama\" and temperature < 0.01: temperature = 0.01\n",
     "    Prompt.set_model(model_family, model)\n",
     "    Prompt.set_system_prompt(system_prompt)\n",
     "    Prompt.set_temperature(temperature)\n",
     "    Prompt.set_max_tokens(max_tokens)    \n",
-    "    \n",
+    "  \n",
     "    chat_history = chat_history or []\n",
     "    chat_history.append([prompt, \"\"])\n",
     "    response = Prompt.exec(chat_history)\n",
@@ -105,6 +59,7 @@
     "def exec_prompt_streaming(chat_history, prompt, system_prompt, model_family = \"Mistral\", model=\"mistral-large\", temperature=0.7, max_tokens=512):\n",
     "    if prompt == \"\": prompt = \"I have no question\"\n",
     "    if model == \"mistral-large\": model = \"mistral-large-latest\"\n",
+    "    if model == \"mistral-small\": model = \"mistral-small-latest\"\n",
     "    if model_family == \"Mistral\" and temperature > 1: temperature = 1\n",
     "    if model_family == \"Llama\" and temperature < 0.01: temperature = 0.01\n",
     "    Prompt.set_system_prompt(system_prompt)\n",
@@ -178,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da4a848-2f93-4150-9420-8dd17840ccc6",
+   "id": "be1a9634-f530-4ce5-b3b8-0e10ee0e0a2f",
    "metadata": {},
    "outputs": [],
    "source": []
