modified:   Compsoft_LLM_app.ipynb modified:   Compsoft_LLM_app.py

--- a/compsoft/Compsoft_LLM_app.ipynb
+++ b/compsoft/Compsoft_LLM_app.ipynb
@@ -14,6 +14,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "863b3f3b-32a8-4783-ad15-5ffd588e5569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "Gradio_user = os.environ[\"GRADIO_USER\"]\n",
+    "Gradio_password = os.environ[\"GRADIO_PASSWORD\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d712a037-a593-4b3b-9ba5-ceb58dc0351f",
    "metadata": {},
@@ -119,7 +131,8 @@
     "    )\n",
     "\n",
     "#demo.launch()\n",
-    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"CompSoft\", \"Bikszadi16\"), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)"
+    "demo.launch(share=True)\n",
+    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(Gradio_user, Gradio_password), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)"
    ]
   },
   {
