feat: moved project files

--- a/app.ipynb
+++ b/app.ipynb
@@ -532,7 +532,7 @@
     "\n",
     "#demo.launch()\n",
     "demo.launch(share=True)\n",
-    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(Gradio_user, Gradio_password), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)"
+    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(GRADIO_USER, GRADIO_PASSWORD), max_threads=20, show_error=True, favicon_path=\"favicon.ico\", state_session_capacity=20)"
    ]
   },
   {
