feat: Changed LLama and Claude Sonnet model names

--- a/app.ipynb
+++ b/app.ipynb
@@ -62,8 +62,8 @@
     "    Each model name is associated with a model family and a model identifier.\n",
     "    \"\"\"\n",
     "      \n",
-    "    LLAMA3_70B_PROMPTING = (ModelFamily.LLAMA, 'llama-3-70b-prompting')\n",
-    "    LLAMA_3_70B_FIREFUNCTION_V2 = (ModelFamily.LLAMA, 'Llama-3-70b-firefunction-v2')\n",
+    "    LLAMA3_70B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3-70b-instruct')\n",
+    "    LLAMA3_8B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3-8b-instruct')\n",
     "    GPT_3_5_TURBO = (ModelFamily.GPT, 'gpt-3.5-turbo')\n",
     "    GPT_4O = (ModelFamily.GPT, 'gpt-4o')\n",
     "    GPT_4_TURBO = (ModelFamily.GPT, 'gpt-4-turbo')\n",
@@ -73,7 +73,7 @@
     "    GEMINI_1_5_FLASH = (ModelFamily.GEMINI, 'gemini-1.5-flash')\n",
     "    GEMINI_1_5_PRO = (ModelFamily.GEMINI, 'gemini-1.5-pro')\n",
     "    CLAUDE_3_HAIKU = (ModelFamily.CLAUDE, 'claude-3-haiku')\n",
-    "    CLAUDE_3_SONNET = (ModelFamily.CLAUDE, 'claude-3-sonnet')\n",
+    "    CLAUDE_3_5_SONNET = (ModelFamily.CLAUDE, 'claude-3.5-sonnet')\n",
     "    CLAUDE_3_OPUS = (ModelFamily.CLAUDE, 'claude-3-opus')\n",
     "\n",
     "\n",
@@ -94,16 +94,16 @@
     "    \"\"\"\n",
     "\n",
     "    match model_name:\n",
-    "        case ModelName.LLAMA3_70B_PROMPTING: \n",
+    "        case ModelName.LLAMA3_70B_INSTRUCT: \n",
     "            return ChatFireworks(\n",
     "                name=\"accounts/fireworks/models/llama-v3-70b-instruct\",\n",
     "                max_tokens = max_new_tokens,\n",
     "                temperature = temperature,\n",
     "            )\n",
     "\n",
-    "        case ModelName.LLAMA_3_70B_FIREFUNCTION_V2:\n",
+    "        case ModelName.LLAMA3_8B_INSTRUCT:\n",
     "            return ChatFireworks(\n",
-    "                name=\"accounts/fireworks/models/firefunction-v1\",\n",
+    "                name=\"accounts/fireworks/models/llama-v3-8b-instruct\",\n",
     "                max_tokens = max_new_tokens,\n",
     "                temperature = temperature,\n",
     "            )\n",
@@ -171,7 +171,7 @@
     "                temperature = temperature,\n",
     "            )    \n",
     "\n",
-    "        case ModelName.CLAUDE_3_SONNET:\n",
+    "        case ModelName.CLAUDE_3_5_SONNET:\n",
     "            return ChatAnthropic(\n",
     "                model_name=\"claude-3-5-sonnet-20240620\",\n",
     "                max_tokens = max_new_tokens,\n",
