new file:   Compsoft_LLM_app.py: sym.link to app.py
modified:   app.ipynb: LLM families reordered to have closed-source then
open-source ones, Changed the name of LLM families to contain their
vendor's name as well, default LLM family and model changed to gpt-4o

modified:   app.py:  LLM families reordered to have closed-source then
open-source ones, Changed the name of LLM families to contain their
vendor's name as well, default LLM family and model changed to gpt-4o

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0e47a080-dee6-48fb-9e51-0749a40ec6c3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0c7be365",
    "metadata": {},
    "outputs": [],
@@ -50,11 +50,11 @@
     "class ModelFamily(Enum):\n",
     "    \"\"\"Represents the model families available for selection.\"\"\"\n",
     "    \n",
-    "    LLAMA = 'Llama'\n",
-    "    GPT = 'GPT'\n",
-    "    MISTRAL = 'Mistral'\n",
-    "    GEMINI = 'Gemini'\n",
-    "    CLAUDE = 'Claude'\n",
+    "    GPT = 'OpenAI GPT'\n",
+    "    GEMINI = 'Google Gemini'\n",
+    "    CLAUDE = 'Anthropic Claude'\n",
+    "    MISTRAL = 'MistralAI Mistral'\n",
+    "    LLAMA = 'Meta Llama'\n",
     "\n",
     "class ModelName(Enum):\n",
     "    \"\"\"\n",
@@ -201,18 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "75e4ee44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Llama': ['llama-3-70b-prompting', 'Llama-3-70b-firefunction-v2'], 'GPT': ['gpt-3.5-turbo', 'gpt-4o', 'gpt-4-turbo'], 'Mistral': ['mistral-large', 'open-mixtral-8x22b', 'mistral-small'], 'Gemini': ['gemini-1.5-flash', 'gemini-1.5-pro'], 'Claude': ['claude-3-haiku', 'claude-3-sonnet', 'claude-3-opus']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model names by families\n",
     "model_by_families: dict[str, list[str]] = {family.value: [] for family in ModelFamily}\n",
@@ -233,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ed1144dc",
    "metadata": {},
    "outputs": [],
@@ -334,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f674972c",
    "metadata": {},
    "outputs": [],
@@ -437,13 +429,13 @@
     "        model_family = gr.Dropdown(\n",
     "            choices=list(model_by_families.keys()),\n",
     "            label=\"Model family\",\n",
-    "            value=\"Mistral\",\n",
+    "            value=\"OpenAI GPT\",\n",
     "        )\n",
     "\n",
     "        model_name = gr.Dropdown(\n",
     "            choices=list(model_by_families[model_family.value]),\n",
     "            label=\"Model\",\n",
-    "            value=\"mistral-large\",\n",
+    "            value=\"gpt-4o\",\n",
     "        )\n",
     "\n",
     "        temperature = gr.Slider(\n",
@@ -560,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
