modified:   app.ipynb modified:   app.py

--- a/app.ipynb
+++ b/app.ipynb
@@ -62,8 +62,9 @@
     "    Each model name is associated with a model family and a model identifier.\n",
     "    \"\"\"\n",
     "      \n",
-    "    LLAMA3_70B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3-70b-instruct')\n",
-    "    LLAMA3_8B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3-8b-instruct')\n",
+    "    LLAMA3_1_405B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3.1-405b-instruct')\n",
+    "    LLAMA3_1_70B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3.1-70b-instruct')\n",
+    "    LLAMA3_1_8B_INSTRUCT = (ModelFamily.LLAMA, 'llama-3.1-8b-instruct')\n",
     "    GPT_3_5_TURBO = (ModelFamily.GPT, 'gpt-3.5-turbo')\n",
     "    GPT_4O = (ModelFamily.GPT, 'gpt-4o')\n",
     "    GPT_4_TURBO = (ModelFamily.GPT, 'gpt-4-turbo')\n",
@@ -94,16 +95,23 @@
     "    \"\"\"\n",
     "\n",
     "    match model_name:\n",
-    "        case ModelName.LLAMA3_70B_INSTRUCT: \n",
+    "        case ModelName.LLAMA3_1_405B_INSTRUCT: \n",
     "            return ChatFireworks(\n",
-    "                name=\"accounts/fireworks/models/llama-v3-70b-instruct\",\n",
+    "                name=\"accounts/fireworks/models/llama-v3p1-405b-instruct\",\n",
     "                max_tokens = max_new_tokens,\n",
     "                temperature = temperature,\n",
     "            )\n",
     "\n",
-    "        case ModelName.LLAMA3_8B_INSTRUCT:\n",
+    "        case ModelName.LLAMA3_1_70B_INSTRUCT: \n",
     "            return ChatFireworks(\n",
-    "                name=\"accounts/fireworks/models/llama-v3-8b-instruct\",\n",
+    "                name=\"accounts/fireworks/models/llama-v3p1-70b-instruct\",\n",
+    "                max_tokens = max_new_tokens,\n",
+    "                temperature = temperature,\n",
+    "            )\n",
+    "\n",
+    "        case ModelName.LLAMA3_1_8B_INSTRUCT:\n",
+    "            return ChatFireworks(\n",
+    "                name=\"accounts/fireworks/models/llama-v3p1-8b-instruct\",\n",
     "                max_tokens = max_new_tokens,\n",
     "                temperature = temperature,\n",
     "            )\n",
